# smallvec-wrapper

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: myvec.rs
src/: lib.rs
